* fixed exceptions handling * stop optional packaged from run before the 1st package's download has been finished * set ProgressBarUpdater's style to marquee while executing (and download finished) * BITS: set the download to available one if already exists

--- a/.gitignore
+++ b/.gitignore
@@ -10,7 +10,7 @@ DotSetup/bin/*
 DotSetup/obj/*
 DotSetup_UnitTest/bin/*
 DotSetup_UnitTest/obj/*
-
+DotSetup_UnitTest/Properties/AssemblyInfo.cs
 
 
 
