* new infra class: ProcessUtils.cs - add extension to Process which retrieve the parent process * HardwareUtils - new methods to detect laptops and battery use * OSUtils - new methods to retrieve the uptime of the system and the user account age * fixed bug with progress bar shows only 98% of the real progress

--- a/DotSetup/DotSetup.csproj
+++ b/DotSetup/DotSetup.csproj
@@ -121,6 +121,7 @@
   <ItemGroup>
     <Compile Include="Infrastructure\ControlUtils.cs" />
     <Compile Include="Infrastructure\DockingHelper.cs" />
+    <Compile Include="Infrastructure\ProcessUtils.cs" />
     <Compile Include="Installation\Packages\CustomPackages\PkgDownloadAndRunAndWait.cs" />
     <Compile Include="Installation\Packages\CustomPackages\PkgDownloadAndRunAndWaitWithParamsChange.cs" />
     <Compile Include="Installation\Packages\PackageDownloaderBits.cs" />
