* added license file * added error to the log for unsupported requirement * added to the current form name to the "SESSION_DATA" section in the runtime xml

--- a/DotSetup/DotSetup.csproj
+++ b/DotSetup/DotSetup.csproj
@@ -122,6 +122,7 @@
     <Compile Include="Infrastructure\ControlUtils.cs" />
     <Compile Include="Infrastructure\DockingHelper.cs" />
     <Compile Include="Infrastructure\ProcessUtils.cs" />
+    <Compile Include="Installation\Configuration\SessionDataConsts.cs" />
     <Compile Include="Installation\Packages\CustomPackages\PkgDownloadAndRunAndWait.cs" />
     <Compile Include="Installation\Packages\CustomPackages\PkgDownloadAndRunAndWaitWithParamsChange.cs" />
     <Compile Include="Installation\Packages\PackageDownloaderBits.cs" />
