--- a/DotSetup/DotSetup.csproj
+++ b/DotSetup/DotSetup.csproj
@@ -77,6 +77,7 @@
   <PropertyGroup />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'QA|AnyCPU'">
     <OutputPath>bin\QA\</OutputPath>
+    <DefineConstants>DEBUG</DefineConstants>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'QA|x86'">
     <OutputPath>bin\x86\QA\</OutputPath>
@@ -146,6 +147,7 @@
     <Compile Include="Installation\Configuration\ConfigParser.cs" />
     <Compile Include="Installation\Configuration\ConfigValidator.cs" />
     <Compile Include="Installation\Events\LoadingEventArgs.cs" />
+    <Compile Include="Installation\WinForm\FormPageManager.cs" />
     <Compile Include="UILayouts\ControlLayout\ButtonsSettings.cs" />
     <Compile Include="UILayouts\ControlLayout\ControlsLayout.cs" />
     <Compile Include="UILayouts\ControlLayout\ImageSettings.cs" />
