--- a/DotSetup_UnitTest/DotSetup_UnitTest.csproj
+++ b/DotSetup_UnitTest/DotSetup_UnitTest.csproj
@@ -65,6 +65,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UIComponents_UnitTest.cs" />
     <Compile Include="XmlParser_UnitTest.cs" />
+    <Compile Include="Utils_UnitTest.cs" />    
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\DotSetup\DotSetup.csproj">
